Update files and modify README.md

--- a/adv.ipynb
+++ b/adv.ipynb
@@ -110,10 +110,7 @@
     "            setattr(self, key, value)\n",
     "            \n",
     "with open(\"config.json\", \"r\") as f:\n",
-    "    config = LoadConfig(json.load(f))\n",
-    "    \n",
-    "config.attack_type = [\"fgm\", \"pgd\"]\n",
-    "config.epsilon = [1e-3, 1e-2, 1e-1]"
+    "    config = LoadConfig(json.load(f))"
    ]
   },
   {
@@ -772,8 +769,8 @@
    ],
    "source": [
     "for file_name, asset in assets.items():\n",
-    "    result = EvaluateIdentificationModel.CMC(asset[\"y_true\"], asset[\"y_pred\"])\n",
-    "    print(f\"{'[' + str(file_name) + ']':<35} Top-1 accuracy: {result[0]:.4f}, Top-5 accuracy: {result[4]:.4f}\")"
+    "    foo = EvaluateIdentificationModel.cmc(asset[\"y_true\"], asset[\"y_pred\"])\n",
+    "    print(f\"{'[' + str(file_name) + ']':<35} Top-1 accuracy: {foo[0]:.4f}, Top-5 accuracy: {foo[4]:.4f}\")"
    ]
   },
   {
@@ -819,8 +816,8 @@
    ],
    "source": [
     "for file_name, asset in assets.items():\n",
-    "    result = EvaluateIdentificationModel.CMC(asset[\"y_true\"], asset[\"y_pred\"])\n",
-    "    print(f\"{'[' + str(file_name) + ']':<35} Top-1 accuracy: {result[0]:.4f}, Top-5 accuracy: {result[4]:.4f}\")"
+    "    foo = EvaluateIdentificationModel.cmc(asset[\"y_true\"], asset[\"y_pred\"])\n",
+    "    print(f\"{'[' + str(file_name) + ']':<35} Top-1 accuracy: {foo[0]:.4f}, Top-5 accuracy: {foo[4]:.4f}\")"
    ]
   },
   {
@@ -874,10 +871,10 @@
    ],
    "source": [
     "for file_name, asset in assets.items():\n",
-    "    eer = EvaluateVerificationModel.EER(asset[\"y_true\"], asset[\"y_pred\"])\n",
-    "    auroc = EvaluateVerificationModel.AUROC(asset[\"y_true\"], asset[\"y_pred\"])\n",
-    "    mindcf = EvaluateVerificationModel.minDCF(asset[\"y_true\"], asset[\"y_pred\"])\n",
-    "    print(f\"{'[' + str(file_name) + ']':<35} EER: {eer:.2f}, AUROC: {auroc:.4f}, minDCF: {mindcf:.4f}\")"
+    "    foo = EvaluateVerificationModel.eer(asset[\"y_true\"], asset[\"y_pred\"])\n",
+    "    bar = EvaluateVerificationModel.auroc(asset[\"y_true\"], asset[\"y_pred\"])\n",
+    "    qux = EvaluateVerificationModel.min_dcf(asset[\"y_true\"], asset[\"y_pred\"])\n",
+    "    print(f\"{'[' + str(file_name) + ']':<35} EER: {foo:.2f}, AUROC: {bar:.4f}, minDCF: {qux:.4f}\")"
    ]
   },
   {
@@ -923,16 +920,16 @@
    ],
    "source": [
     "for file_name, asset in assets.items():\n",
-    "    eer = EvaluateVerificationModel.EER(asset[\"y_true\"], asset[\"y_pred\"])\n",
-    "    auroc = EvaluateVerificationModel.AUROC(asset[\"y_true\"], asset[\"y_pred\"])\n",
-    "    mindcf = EvaluateVerificationModel.minDCF(asset[\"y_true\"], asset[\"y_pred\"])\n",
-    "    print(f\"{'[' + str(file_name) + ']':<35} EER: {eer:.2f}, AUROC: {auroc:.4f}, minDCF: {mindcf:.4f}\")"
+    "    foo = EvaluateVerificationModel.eer(asset[\"y_true\"], asset[\"y_pred\"])\n",
+    "    bar = EvaluateVerificationModel.auroc(asset[\"y_true\"], asset[\"y_pred\"])\n",
+    "    qux = EvaluateVerificationModel.min_dcf(asset[\"y_true\"], asset[\"y_pred\"])\n",
+    "    print(f\"{'[' + str(file_name) + ']':<35} EER: {foo:.2f}, AUROC: {bar:.4f}, minDCF: {qux:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b29501c1-f47e-46f1-a7b2-c1fbd06030b5",
+   "id": "7acadd4c-92e1-46d4-8365-f933dd7c5210",
    "metadata": {},
    "outputs": [],
    "source": []
